# EltexProject

./: CMakeLists.txt  README.md  arc.drawio  bitmap.c  bitmap.h  main.c
comp/: README.md  comp.c  comp.h  comp_test.c  comp_test.h
copy_clone/: README.md  copy_clone.c  copy_clone.h  copy_clone_test.c  copy_clone_test.h
demo/: CMakeLists.txt  err.h  main.c  read_example.bitmap  ui.c  ui.h  utils.c  utils.h
lib/bitmap/: CMakeLists.txt  README.md  bitmap.c  bitmap.h  bitmap_struct.h
lib/bitmap/bitwise/: README.md  bitwise.c  bitwise_test.c  bitwise_test.h
lib/bitmap/bmp/: README.md  bmp.c  bmp_test.c  bmp_test.h
lib/bitmap/comp/: README.md  comp.c  comp_test.c  comp_test.h
lib/bitmap/concat/: README.md  concat.c  concat_test.c  concat_test.h
lib/bitmap/copy_clone/: README.md  copy_clone.c  copy_clone_test.c
lib/bitmap/print/: README.md  print.c
lib/bitmap/reset/: README.md  reset.c  reset_test.c  reset_test.h
lib/bitmap/save_load/: README.md  save_load.c  save_load_test.c  save_load_test.h
lib/logger/: CMakeLists.txt  README.md  logger.c  logger.h  logger_test.c  logger_test.h
print/: README.md  print.c  print.h
test/: CMakeLists.txt  main.c
